# dealvault-platform-escrow

./: .dockerignore  .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  README.md  dealvaultbot.2026-06-06.private-key.pem
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  debug.js  package-lock.json  package.json  reset-role.js  reset_role.js  server.js
backend/config/: database.js
backend/controllers/: applicationController.js  authController.js  dealController.js  issueController.js  kycController.js  webhookController.js
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/middleware/: auth.js  errorHandler.js  sanitize.js
backend/models/: Application.js  Deal.js  Issue.js  User.js
backend/routes/: applications.js  auth.js  deals.js  issues.js  kyc.js  webhooks.js
backend/scripts/: db-check.js
backend/services/: botMessages.js  githubBot.js
backend/tests/: applications.test.js  auth.test.js  deals.test.js  kyc.test.js  middleware.test.js  user.model.test.js  webhook.test.js
backend/utils/: helpers.js  (+3 more)
contracts/solana/: Cargo.toml
contracts/solana/src/: error.rs  lib.rs  state.rs
contracts/solana/src/instructions/: dispute.rs  init_escrow.rs  mod.rs  refund.rs  release.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SMART_CONTRACTS.md  github-bot-setup.md
frontend/: .dockerignore  .env.example  .gitignore  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+92 files in other folders)
